--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.12.0",
     "react-accessible-accordion": "^3.0.1",
+    "react-alert-confirm": "^3.3.6",
     "react-animate-on-scroll": "^2.1.5",
     "react-apexcharts": "^1.3.9",
     "react-app-polyfill": "^1.0.5",
@@ -80,6 +81,7 @@
     "react-credit-cards": "^0.8.3",
     "react-dev-utils": "^9.1.0",
     "react-device-detect": "^2.0.1",
+    "react-dialog-confirm": "^1.1.0",
     "react-dom": "^16.12.0",
     "react-easy-crop": "^4.0.1",
     "react-edit-text": "^4.2.0",
@@ -102,6 +104,7 @@
     "react-parallax": "^3.0.3",
     "react-particles-js": "^2.7.0",
     "react-redux": "^7.2.4",
+    "react-responsive-modal": "^6.2.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scroll-up": "^1.3.3",
@@ -110,7 +113,7 @@
     "react-slick": "^0.24.0",
     "react-stripe-checkout": "^2.6.3",
     "react-switch": "^6.0.0",
-    "react-tabs": "^3.2.2",
+    "react-tabs": "^3.2.3",
     "react-text-loop": "^2.3.0",
     "react-tilt": "^0.1.4",
     "react-video-tag": "0.0.10",
